# ChangeLog for dev-ruby/activeldap
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-ruby/activeldap/ChangeLog,v 1.6 2013/07/23 01:57:27 patrick Exp $

  23 Jul 2013; Patrick Lauer <patrick@gentoo.org> -activeldap-1.2.2-r1.ebuild:
  QA: Drop old version with unsatisfiable ruby-gettext depend

  08 Jul 2013; Hans de Graaff <graaff@gentoo.org> -activeldap-3.1.1-r1.ebuild:
  Cleanup.

*activeldap-3.2.2 (30 Sep 2012)

  30 Sep 2012; Hans de Graaff <graaff@gentoo.org> +activeldap-3.2.2.ebuild:
  Version bump.

  16 Aug 2012; Diego E. Pettenò <flameeyes@gentoo.org>
  activeldap-1.2.2-r1.ebuild:
  Actually rely on the rake task as well.

  16 Aug 2012; Diego E. Pettenò <flameeyes@gentoo.org> -activeldap-3.1.1.ebuild,
  activeldap-1.2.2-r1.ebuild, activeldap-3.1.1-r1.ebuild:
  Remove old; drop FAKEGEM_NAME; add proper dependency over test-unit:2 (even if
  restricted); only depend on hoe for doc building or tests.

*ruby-activeldap-3.1.1-r1 (02 Jul 2012)

  02 Jul 2012; Hans de Graaff <graaff@gentoo.org>
  +ruby-activeldap-3.1.1-r1.ebuild:
  Extend versioning to activemodel 3.2 since it is mostly compatible:
  https://github.com/activeldap/activeldap/pull/39

*ruby-activeldap-3.1.1 (15 Apr 2012)

  15 Apr 2012; Hans de Graaff <graaff@gentoo.org>
  +ruby-activeldap-3.1.1.ebuild:
  Version bump.

  06 Dec 2011; Hans de Graaff <graaff@gentoo.org>
  -ruby-activeldap-1.2.1.ebuild, -ruby-activeldap-1.2.2.ebuild:
  Remove old versions.

  15 Oct 2011; Markus Meier <maekke@gentoo.org>
  ruby-activeldap-1.2.2-r1.ebuild:
  amd64/x86 stable, bug #384827

  08 Oct 2011; Raúl Porcel <armin76@gentoo.org> ruby-activeldap-1.2.1.ebuild,
  ruby-activeldap-1.2.2.ebuild, ruby-activeldap-1.2.2-r1.ebuild:
  Drop ia64 keywords

*ruby-activeldap-1.2.2-r1 (13 Mar 2011)

  13 Mar 2011; Hans de Graaff <graaff@gentoo.org>
  +ruby-activeldap-1.2.2-r1.ebuild:
  Use our own metadata to avoid problems with versioning.
