@@ -1,9 +1,9 @@
-# Copyright 1999-2012 Gentoo Foundation
+# Copyright 1999-2013 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
 # $Header: /var/cvsroot/gentoo-x86/dev-ruby/activeldap/activeldap-3.2.2.ebuild,v 1.1 2012/09/30 08:36:28 graaff Exp $
 
-EAPI=4
-USE_RUBY="ruby18 ruby19"
+EAPI=5
+USE_RUBY="ruby19"
 
 RUBY_FAKEGEM_TASK_DOC=""
 RUBY_FAKEGEM_EXTRADOC="README.textile TODO"
@@ -16,17 +16,15 @@ DESCRIPTION="Ruby/ActiveLDAP provides an activerecord inspired object oriented i
 HOMEPAGE="https://github.com/activeldap/activeldap"
 
 LICENSE="GPL-2"
-SLOT="3"
+SLOT="4"
 KEYWORDS="~amd64"
 IUSE=""
 
 # Most tests require a live LDAP server to run.
 RESTRICT="test"
 
-ruby_add_bdepend "dev-ruby/hoe"
-
 ruby_add_rdepend "
-	>=dev-ruby/activemodel-3.2.8:3.2
+	>=dev-ruby/activemodel-4.0.0:4.0
 	dev-ruby/locale
 	dev-ruby/ruby-gettext
 	dev-ruby/gettext_i18n_rails
