@@ -2,6 +2,13 @@
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
 # $Header: /var/cvsroot/gentoo-x86/dev-ruby/activeldap/ChangeLog,v 1.6 2013/07/23 01:57:27 patrick Exp $
 
+  21 Oct 2013; Peter Wilmott <p@p8952.info> activeldap-4.0.1.ebuild:
+  dev-ruby/activeldap: Updated SLOT, EAPI & Dependencies  * Updated the EAPI to
+  v5 * Removed ruby18 target as not all deps support it and nor does upstream *
+  Updated the SLOT to keep the library inline with dev-ruby/rails * Removed dev-
+  ruby/hoe from bdepend as we are not running tests * Updated dev-
+  ruby/activemodel dep version
+
   23 Jul 2013; Patrick Lauer <patrick@gentoo.org> -activeldap-1.2.2-r1.ebuild:
   QA: Drop old version with unsatisfiable ruby-gettext depend
 
